--- a/src/main/webapp/error.html
+++ b/src/main/webapp/error.html
@@ -3,16 +3,26 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>error</title>
-<style type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+<style type="text/css">
 body{
 
 
 text-align: center;
 }
-
+.btn {
+border: none;
+color: white;
+padding: 14px 28px;
+font-size: 16px;
+cursor: pointer;
+}
+.default {background-color: #e7e7e7; color: black;} 
+.default:hover {background: #ddd;}
 </style>
-
 
 </head>
 <body>
@@ -20,6 +30,8 @@ text-align: center;
 
 <h1>NO PAGE FOUND</h1>
 
-<h3>PAGE UNDER CONSTRUCTION</h3>
+<h3>SEARCH FUNCTIONALITIES ARE NOT INCLUDED IN DEMO PAGES</h3>
+
+<a class="btn default" href="example.html">Go Back</a>
 </body>
 </html>
